# path_planner

./: CMakeLists.txt  package.xml  rosbag record.txt
config/hole1/: hole1.rviz  hole1_map.yaml  hole1_map1.yaml
include/: algorithm.h  collisiondetection.h  constants.h  node3d.h  planner.h  visualize.h
launch/: map1.launch
matlab/: data.m  mapbuild.asv  mapbuild.m  novatel_fix.csv  test.asv  test.m
matlab/bag/: hybrid_a.bag  hybrid_a_1.bag  hybrid_a_1_path_details.csv  hybrid_a_path_details.csv  hybrid_a_pr.bag  hybrid_a_pr_1.bag  hybrid_a_pr_1_path_details.csv  hybrid_a_pr_path_details.csv
matlab/csv/231225_YL/: hole1_1-novatel-fix.csv  hole1_1-novatel-inspva.csv  hole1_1.bag  hole1_2-novatel-fix.csv  hole1_2-novatel-inspva.csv  hole1_2.bag  hole1_3-novatel-fix.csv  hole1_3-novatel-inspva.csv  hole1_3.bag  hole1_4-novatel-fix.csv  hole1_4-novatel-inspva.csv  hole1_4.bag  hole1_5-novatel-fix.csv  hole1_5-novatel-inspva.csv  hole1_5.bag  hole1_6-novatel-fix.csv  hole1_6-novatel-inspva.csv  hole1_6.bag  hole1_7-novatel-fix.csv  hole1_7-novatel-inspva.csv  (+1 more)
matlab/download_2023-12-20_10-06-38/: generate_map.m  generate_map__with_height.m  generate_map_hole10.m  generate_map_hole15.m  generate_map_hole15_with_height.m  generate_map_hole17.m  generate_map_hole1_.m  generate_map_hole1_with_ob.m  generate_map_hole3.m  generate_map_hole5.m  generate_map_hole6.m  generate_map_hole6_1.m  generate_map_hole7.m  generate_map_hole8.m
msg/: PathDetails.msg  occupancy.msg
src/: algorithm.cpp  collisiondetection.cpp  map_converter.cpp  node3d.cpp  planner.cpp  visualize.cpp
(+11 files in other folders)
